<resources>
    <string name="app_name">CigarLuxe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CigarLuxe</string>
    <string name="nav_header_subtitle">cigarluxe@luxe.ca</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

<!--    menu strings-->
    <string name="menu_home">Home</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_quiz">Cigar Quiz</string>
    <string name="menu_picker">Random Picker</string>
    <string name="menu_list">Cigar Info</string>
    <string name="menu_chat">Cigar AI</string>
    <string name="menu_credits">Credits</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    cigar generator text-->
    <string name="picker_title">Cigar Generator</string>
    <string name="picker_button">Click Me!</string>

    <!--    tutorial text -->
    <string name="tutorial_title">Cigar Tips</string>
    <string name="cigar_tip">Enjoying a Cigar: Take your time and savor the experience. Cut the cigar properly, light it evenly, and puff gently. Relax and appreciate the flavors, aroma, and craftsmanship.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">List and Recycler Settings</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Bigger Listview</string>
    <string name="attachment_title">Text Size</string>
    <string name="attachment_summary_on">Change Text to a Smaller Size
    </string>
    <string name="attachment_summary_off">Change Text to a Larger Size</string>
    <string name="pref_text">Text Settings</string>


    <!--    homepage-->
    <string name="homedesc">Discover the Art of Cigars with CigarLuxe, your go-to source for all things cigars.
        Immerse yourself in the world of premium tobacco, rich flavors, and expert craftsmanship. Whether you\'re a seasoned aficionado
        or a curious beginner, CigarLuxe is here to elevate your cigar experience.</string>

</resources>